# sudoku-solver

./: .gitignore  README.md  sudoku-solver.cabal  test_cases
src/: main.hs
src/DataTypes/: DataTypes.hs
src/PivotChoice/: Pivot.hs
src/Prune/: Prune.hs  Transformators.hs
src/Solve/: Solve.hs
src/Utils/: Common.hs  Parsers.hs  Prints.hs  Until.hs
src/Validators/: Validators.hs
src/types/: data.hs
src/utils/: parse_input.hs
test/: Test.hs
test/Utils/: TestCommon.hs
